<resources>
    <string name="app_name">Get a Pet</string>
    <string name="Si_perteneces">Si eres una protectora, pulsa aquí:</string>
    <string name="Si_eres">Si eres un usuario particular:</string>
    <string name="Intro_Datos">Introducción de datos</string>
    <string name="Hint_Nombre">Nombre</string>
    <string name="Hint_Direccion">Dirección</string>
    <string name="Hint_Teléfono">Teléfono de contacto</string>
    <string name="Hint_Email">E-mail</string>
    <string name="Hint_Contraseña">Contraseña</string>
    <string name="Hint_Conf_Contraseña">Confirmar contraseña</string>
    <string name="Hint_Pais">País</string>
    <string name="Recuerdame">Recuérdame:</string>
    <string name="Has_olvidado_tu_contraseña">¿Has olvidado tu contraseña? Pulsa aquí.</string>
    <string name="Iniciar_Sesion">Iniciar Sesión</string>
    <string name="Recuperar_Pass_Nombre">Introduzca el nombre de su cuenta, por favor.</string>
    <string name="Confirmar">Confirmar</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="Perfil_Protectora">Perfil Protectora</string>
    <string name="Anuncios_animales">Mis anuncios</string>
    <string name="Dar_En_Adopción">Dar en adopción</string>
    <string name="Cambiar_Datos">Cambiar Datos</string>
    <string name="Cambio_Datos_Perfil">Cambio Datos Perfil</string>
    <string name="Cambio_Pass">Cambio Contraseña</string>
    <string name="Cambio_Email">Cambio Email</string>
    <string name="Cambio_Pais">Cambio País</string>
    <string name="Cambio_Ciudad">Cambio Ciudad</string>
    <string name="Cambio_Direccion">Cambio Dirección</string>
    <string name="Cambio_Telef">Cambio Teléfono</string>
    <string name="Perfil_Usuario">Perfil Usuario</string>
    <string name="Mis_Anuncios">Mis Anuncios</string>
    <string name="Animales_Adoptados">Animales Adoptados</string>
    <string name="Adoptar">Adoptar</string>
    <string name="Adoptar_Filtros">Adoptar (Filtros)</string>
    <string name="Dar_En_Adopcion">Dar en Adopción</string>
    <string name="Edad">Edad</string>
    <string name="Descripcion">Descripción, datos médicos...</string>
    <string name="Fotos">Añadir Fotos</string>
    <string name="Borrar_Fotos">Borrar Fotos</string>
    <string name="Conf_Adopcion">Confirmar Adopción</string>
    <string name="Borrar_Anuncio">Borrar Anuncio</string>
    <string name="Accion_Cosa">Introduce el nombre del usuario que ha adoptado al animal.</string>
    <string name="Protectora_Conf">Protectora</string>
    <string name="Info_Protectora">Información Protectora</string>
    <string name="Volver">Volver</string>
    <string name="Filtros_Animal_Anuncio">Filtros</string>
    <string name="Buscar">Buscar</string>
    <string name="Cerrar_Sesión">Cerrar Sesión</string>
</resources>
