<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/patronhuellasideal22"
    tools:context=".CambiarDatosPersonalesActivity">

    <TextView
        android:id="@+id/txtCambioDatosPerfilCambiarDatosPersonalesActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_text_azul"
        android:padding="5dp"
        android:text="@string/Cambio_Datos_Perfil"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/txtPasswordCambiarDatosPersonalesActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Hint_Contraseña"
        android:inputType="textPassword"
        android:maxLength="40"
        android:textColorHint="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <Button
        android:id="@+id/btnCambioContraseñaCambiarDatosPersonalesActivity"
        android:layout_width="125dp"
        android:layout_height="51dp"
        android:background="@drawable/border_button"
        android:text="@string/Cambio_Pass"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <EditText
        android:id="@+id/txtEmailCambiarDatosPersonalesActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Hint_Email"
        android:inputType="textPersonName"
        android:maxLength="200"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273" />

    <Button
        android:id="@+id/btnCambioEmailCambiarDatosPersonalesActivity"
        android:layout_width="125dp"
        android:layout_height="51dp"
        android:background="@drawable/border_button"
        android:padding="5dp"
        android:text="@string/Cambio_Email"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />

    <Spinner
        android:id="@+id/spinnerPaisCambiarDatosPersonalesActivity"
        android:layout_width="239dp"
        android:layout_height="28dp"
        android:background="@drawable/spinner_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435" />

    <Button
        android:id="@+id/btnCambioPaisCambiarDatosPersonalesActivity"
        android:layout_width="125dp"
        android:layout_height="51dp"
        android:background="@drawable/border_button"
        android:padding="5dp"
        android:text="@string/Cambio_Pais"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433" />

    <Spinner
        android:id="@+id/spinnerCiudadCambiarDatosPersonalesActivity"
        android:layout_width="239dp"
        android:layout_height="28dp"
        android:background="@drawable/spinner_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <Button
        android:id="@+id/btnCambioCiudadCambiarDatosPersona"
        android:layout_width="125dp"
        android:layout_height="51dp"
        android:background="@drawable/border_button"
        android:padding="5dp"
        android:text="@string/Cambio_Ciudad"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572" />

    <EditText
        android:id="@+id/txtCambioDireccionCambiarDatosPerfilActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Hint_Direccion"
        android:inputType="textPersonName"
        android:maxLength="150"
        android:textColorHint="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.849" />

    <Button
        android:id="@+id/btnCambioDireccionCambiarDatosPersonalesActivity"
        android:layout_width="125dp"
        android:layout_height="51dp"
        android:background="@drawable/border_button"
        android:text="@string/Cambio_Direccion"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.852" />

    <EditText
        android:id="@+id/txtTelefonoCambioDatosPerfilActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Hint_Teléfono"
        android:inputType="textPersonName"
        android:maxLength="9"
        android:textColorHint="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.708" />

    <Button
        android:id="@+id/btnCambioTelefonoCambiarDatosPerfilActivity"
        android:layout_width="125dp"
        android:layout_height="51dp"
        android:background="@drawable/border_button"
        android:text="@string/Cambio_Telef"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.711" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />


</androidx.constraintlayout.widget.ConstraintLayout>