<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/patronmashuellasbueno"
    tools:context=".IntroducirNuevoOwnerActivity">

    <TextView
        android:id="@+id/txtInfoHacerIntroducirNuevoOwnerActivity"
        android:layout_width="364dp"
        android:layout_height="68dp"
        android:background="@drawable/border_text_azul"
        android:padding="5dp"
        android:text="@string/Accion_Cosa"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174" />

    <EditText
        android:id="@+id/txtEscribirNuevoOwnerIntroducirNuevoOwnerActivity"
        android:layout_width="281dp"
        android:layout_height="61dp"
        android:ems="10"
        android:hint="@string/Hint_Nombre"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435" />

    <Button
        android:id="@+id/btnConfirmarNuevoOwnerIntroducirNuevoOwnerActivity"
        android:layout_width="170dp"
        android:layout_height="78dp"
        android:background="@drawable/border_button"
        android:padding="5dp"
        android:text="@string/Confirmar"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745" />
</androidx.constraintlayout.widget.ConstraintLayout>