<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/patronhuellasideal22"
    tools:context=".MenuUsuarioActivity">

    <TextView
        android:id="@+id/txtPerfilUsuarioMenuUsuarioActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_text_azul"
        android:padding="5dp"
        android:text="@string/Perfil_Usuario"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <Button
        android:id="@+id/btnMisAnunciosMenuUsuarioActivity"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:background="@drawable/border_button"
        android:text="@string/Anuncios_animales"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145" />

    <Button
        android:id="@+id/btnAnimalesAdoptadosMenuUsuarioActivity"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:background="@drawable/border_button"
        android:text="@string/Animales_Adoptados"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145" />

    <Button
        android:id="@+id/btnDarEnAdopcionMenuUsuarioActivity"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:background="@drawable/border_button"
        android:text="@string/Dar_En_Adopción"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364" />

    <Button
        android:id="@+id/btnCambiarDatosMenuUsuarioActivity"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:background="@drawable/border_button"
        android:text="@string/Cambiar_Datos"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364" />

    <Button
        android:id="@+id/btnAdoptarMenuUsuarioActivity"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:background="@drawable/border_button"
        android:text="@string/Adoptar"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588" />

    <Button
        android:id="@+id/btnAdoptarFiltrosMenuUsuarioActivity"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:background="@drawable/border_button"
        android:text="@string/Adoptar_Filtros"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588" />

    <TextView
        android:id="@+id/txtPaisCiudadMenuUsuarioActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_text_azul"
        android:padding="5dp"
        android:text="TextView"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.853" />

    <TextView
        android:id="@+id/txtEmailMenuUsuarioActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_text_azul"
        android:padding="5dp"
        android:text="TextView"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.744" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90"/>

    <Button
        android:id="@+id/btnCerrarSesionMenuUsuarioActivity"
        android:layout_width="96dp"
        android:layout_height="49dp"
        android:background="@drawable/border_button"
        android:padding="5dp"
        android:text="@string/Cerrar_Sesión"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />
</androidx.constraintlayout.widget.ConstraintLayout>