<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/patronmashuellasbueno"
    tools:context=".IniciarSesionActivity">

    <ImageView
        android:id="@+id/imgLogoIniciarSesionActivity"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        app:srcCompat="@drawable/logofinal" />

    <EditText
        android:id="@+id/txtNombreIniciarSesionActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Hint_Nombre"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469" />

    <EditText
        android:id="@+id/txtContraseñaIniciarSesionActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Hint_Contraseña"
        android:inputType="textPassword"
        android:textColorHint="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />

    <TextView
        android:id="@+id/txtRecuerdameIniciarSesionActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_text_azul"
        android:padding="5dp"
        android:text="@string/Recuerdame"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67" />

    <Switch
        android:id="@+id/switchIniciarSesionActivity"
        style="@style/BrandedSwitch.text"
        android:layout_width="47dp"
        android:layout_height="53dp"
        android:checked="false"
        android:switchPadding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.707"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.676" />

    <TextView
        android:id="@+id/txtOlvidarContraseñaIniciarSesionActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_text"
        android:padding="5dp"
        android:text="@string/Has_olvidado_tu_contraseña"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773" />

    <Button
        android:id="@+id/btnIniciarSesionIniciarSesionActivity"
        android:layout_width="175dp"
        android:layout_height="70dp"
        android:background="@drawable/border_button"
        android:text="@string/Iniciar_Sesion"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.94" />

</androidx.constraintlayout.widget.ConstraintLayout>